fix: fixed style on mobile version

--- a/ecommerce/style.css
+++ b/ecommerce/style.css
@@ -34,6 +34,8 @@ ul {
 
 .nav-bar {
     background-color: rgb(47, 47, 47);
+    position: sticky;
+    top:0;
     width: 100%;
     height: 20px;
     display: flex;
@@ -201,7 +203,7 @@ ul {
 }
 
 .sidebar {
-    position: relative;
+    position: sticky;
     top: 0;
     
     display: flex;
@@ -311,9 +313,10 @@ width: 10px;
     flex-direction: column;
     align-self: start;
     gap: 10px;
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     padding: 0 20px;
+    overflow-y:auto;
 }
 
 .container-list {
@@ -323,7 +326,9 @@ width: 10px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.171);
     min-height: 38%;
     width: 100%;
-    padding-top: 8px;
+    margin-top: 4px;
+    /* padding-top: 8px; */
+    padding: 10px;
 }
 
 .total {
@@ -377,14 +382,16 @@ width: 10px;
 
 .payment-list {
     padding:10px;
-    /* height: 100%; */
+    min-height: 20%;
     width: 100%;
-    
+    /* box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.136); */
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
     overflow-y: auto;
 }
 
-.payment-list .list-cart {
-    /* margin-bottom: 60px; */
+.payment-list .list-cart li {
+    box-shadow: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
 }
 
 .payment-form {
@@ -393,8 +400,9 @@ width: 10px;
     align-items: center;
     padding: 20px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.171);
-    height: 80vh;
+    /* height: 80vh; */
     width: 100%;
+    margin-bottom: 100px;
 }
 
 .pay-form {
@@ -408,8 +416,8 @@ width: 10px;
 }
 
 .payment-form input {
-    border: none;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.524);
+    border: 0.5px solid rgba(0, 0, 0, 0.138);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.169);
     padding: 5px;
     width: 100%;
     
@@ -417,6 +425,10 @@ width: 10px;
 
 .payment-form input:focus {
     outline: none;
+}
+
+.payment-form input:focus::placeholder {
+    opacity: 0;
 }
 
 .input-container {
@@ -573,31 +585,43 @@ width: 10px;
 .products-ul {
     padding: 0px;
     margin: 0;
+    /* display: flex;
+    flex-direction: column; */
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5rem;
     
 }
 
 .product-card {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-    min-height: 300px;
+    min-height: 180px;
     background-color: white;
     /* width: 150px; */
-    padding: 10px;
+    padding: 0 20px;
+    margin: 0 15px;
     list-style: none;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.133);
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    gap: 15px;
 }
 
 .product-card p {
+    width: 80%;
     margin:0;
 }
 
 .product-card img {
-    width:80px;
+    width:50px;
 }
 
 .buttons {
@@ -699,7 +723,19 @@ width: 10px;
     .products-ul {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 1rem;
+        gap: 2rem;
+    }
+
+    .product-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        min-height: 300px;
+        margin: 0;
+    }
+
+    .product-card img {
+            width:80px;
     }
 
     .main-body {
@@ -749,15 +785,26 @@ width: 10px;
     .body-payment-section {
             display: flex;
             flex-direction: row;
+            overflow-y:hidden;
+            height: 100vh;
         }
 
     .container-list {
         height: 80vh;
             width: 75%;
+            margin-top:10px;
+            margin-bottom: 0;
+    }
+
+    .payment-form {
+        margin-top:10px;
+        margin-bottom: 0;
+        height: 80vh;
     }
 
     .buyproducts {
         width: 40vw;
+        min-height: 60%;
     }
 
     .main-section {
